2010-04-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Changed the behaviour of SNMP alerts.
	  Alert conditions are ANDed, not ORed.

2010-04-28  Sancho Lerena <slerena@artica.es>

	* util/gpx2pandora_agent_data.pl: Added support to process
	gpx files with tracks, plus the RTE format.

	* lib/PandoraFMS/Core.pm: Fixed call to group stats and now
	process all groups (included disabled) and group 1, because
	with 3.1 group id 1 is not "all" anymore.

2010-04-26  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Fixed the purge script. Did not work if
	  any of the data tables was empty.

2010-04-23  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Removed a Log4x trace. Log4x feature 
	has been tested at this level, and works fine.

2010-04-14  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/PredictionServer.pm: Added support for service
	  modules (Enterprise).

2010-04-05  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Trying to fix the problem detected 
	with recon and new modules from a network template.

	* lib/PandoraFMS/Core.pm: Fallback to previous version, this fix
        makes Pandora server to generate events constantly.

2010-04-05  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Core.pm: Fixed the problem that agent status(estado)
	is never updated to $new_status if initial state of new agent is
	"estado != last_status" with "$new_status == last_status".
	eg) When new agents are added by recontask, estado=1 and last_status=0
	are set.

2010-04-04  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf: Some "fixed" descriptions and sample
	setup, I hope this help to clarify new users how to setup the MTA
	(A LOTS of problems with this in forums), and some new inline 
	documentation about some configuration tokens.

2010-03-24  Sancho Lerena <slerena@artica.es>

    * util/pandora_manage.pl: New tool to do things in Pandora (system wide)